src/sunlinsol/band/fmod/fsunlinsol_band_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! ---------------------------------------------------------------
! Programmer(s): Auto-generated by swig.
! ---------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ---------------------------------------------------------------

module fsunlinsol_band_mod
 use, intrinsic :: ISO_C_BINDING
 use fsunlinsol_mod
 use fsundials_types_mod
 use fnvector_mod
 use fsundials_types_mod
 implicit none
 private

 ! DECLARATION CONSTRUCTS
 public :: FSUNLinSol_Band
 public :: FSUNBandLinearSolver
 public :: FSUNLinSolGetType_Band
 public :: FSUNLinSolInitialize_Band
 public :: FSUNLinSolSetup_Band
 public :: FSUNLinSolSolve_Band
 public :: FSUNLinSolLastFlag_Band
 public :: FSUNLinSolSpace_Band
 public :: FSUNLinSolFree_Band

! WRAPPER DECLARATIONS
interface
function FSUNLinSol_Band(y, a) &
bind(C, name="SUNLinSol_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
type(C_PTR), value :: a
type(C_PTR) :: fresult
end function

function FSUNBandLinearSolver(y, a) &
bind(C, name="SUNBandLinearSolver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
type(C_PTR), value :: a
type(C_PTR) :: fresult
end function

function FSUNLinSolGetType_Band(s) &
bind(C, name="SUNLinSolGetType_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolInitialize_Band(s) &
bind(C, name="SUNLinSolInitialize_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolSetup_Band(s, a) &
bind(C, name="SUNLinSolSetup_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
integer(C_INT) :: fresult
end function

function FSUNLinSolSolve_Band(s, a, x, b, tol) &
bind(C, name="SUNLinSolSolve_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
type(C_PTR), value :: x
type(C_PTR), value :: b
real(C_DOUBLE), value :: tol
integer(C_INT) :: fresult
end function

function FSUNLinSolLastFlag_Band(s) &
bind(C, name="SUNLinSolLastFlag_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: fresult
end function

function FSUNLinSolSpace_Band(s, lenrwls, leniwls) &
bind(C, name="SUNLinSolSpace_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: lenrwls
integer(C_LONG) :: leniwls
integer(C_INT) :: fresult
end function

function FSUNLinSolFree_Band(s) &
bind(C, name="SUNLinSolFree_Band") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

end interface


end module
